# winpthreads-msvc

./: CMakeLists.txt  README
include/: pthread.h
src/: cond.c  mutex.c  spinlock.c  thread.c
